force-app/main/default/objects/NCMT_Assembly_Lookup_Item__c/NCMT_Assembly_Lookup_Item__c.object-meta.xml
<CustomObject>
    <label>NCMT Assembly Lookup Items</label>
    <nameField>
        <displayFormat>AL-{0000}</displayFormat>
        <label>Assembly LineItem</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCMT Assembly Lookup Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>