force-app/main/default/objects/NCMT_Assembly_Lookup_Item__c/fields/Assembly_Lookup_Detail__c.field-meta.xml
<CustomField>
    <fullName>Assembly_Lookup_Detail__c</fullName>
    <label>Assembly Lookup Detail</label>
    <referenceTo>NCMT_Assembly_Lookup_Detail__c</referenceTo>
    <relationshipLabel>NCMT Assembly Lookup Items</relationshipLabel>
    <relationshipName>Assembly_Lookup_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>