force-app/main/default/objects/NCMT_Assembly_Lookup_Item__c/fields/Assembly_Number__c.field-meta.xml
<CustomField>
    <fullName>Assembly_Number__c</fullName>
    <formula>Assembly_Lookup_Detail__r.Assembly_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assembly Number</label>
    <type>Text</type>
</CustomField>