force-app/main/default/objects/NCMT_Assembly_Lookup_Item__c/fields/Assembly_SKey__c.field-meta.xml
<CustomField>
    <fullName>Assembly_SKey__c</fullName>
    <formula>Assembly_Lookup_Detail__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assembly SKey</label>
    <type>Text</type>
</CustomField>