force-app/main/default/objects/NCMT_Assembly_Lookup_Item__c/fields/Conversion_Factor__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Factor__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Conversion Factor</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>