force-app/main/default/objects/NCMT_Assembly_Lookup_Item__c/fields/Installation_Cost__c.field-meta.xml
<CustomField>
    <fullName>Installation_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Installation Unit Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>