force-app/main/default/objects/NCMT_Assembly_Lookup_Item__c/fields/Installation_Cost_f__c.field-meta.xml
<CustomField>
    <fullName>Installation_Cost_f__c</fullName>
    <formula>(Quantity__c * (NCMT_Master_Format_Lookup__r.Hourly_Rate_txt__c +  NCMT_Master_Format_Lookup__r.Equipment_Unit_Cost__c))/ Conversion_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installation Unit Cost f</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>