force-app/main/default/objects/NCMT_Assembly_Lookup_Item__c/fields/Labor_Hours__c.field-meta.xml
<CustomField>
    <fullName>Labor_Hours__c</fullName>
    <formula>NCMT_Master_Format_Lookup__r.Labor_Hours_txt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Labor Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>