force-app/main/default/objects/NCMT_Assembly_Lookup_Item__c/fields/Labor_Hours_F__c.field-meta.xml
<CustomField>
    <fullName>Labor_Hours_F__c</fullName>
    <label>Labor Hours F</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>