force-app/main/default/objects/NCMT_Assembly_Lookup_Item__c/fields/Labor_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Labor_Unit_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Labor Unit Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>