force-app/main/default/objects/NCMT_Assembly_Lookup_Item__c/fields/Labor_Unit_Cost_f__c.field-meta.xml
<CustomField>
    <fullName>Labor_Unit_Cost_f__c</fullName>
    <formula>(NCMT_Master_Format_Lookup__r.Hourly_Rate_txt__c *  Quantity__c)/ Conversion_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Labor Unit Cost f</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>