force-app/main/default/objects/NCMT_Assembly_Lookup_Item__c/fields/Level_2_Description__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Description__c</fullName>
    <formula>Assembly_Lookup_Detail__r.Level_2_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level 2 Description</label>
    <type>Text</type>
</CustomField>