force-app/main/default/objects/NCMT_Assembly_Lookup_Item__c/fields/Level_4_Description__c.field-meta.xml
<CustomField>
    <fullName>Level_4_Description__c</fullName>
    <formula>Assembly_Lookup_Detail__r.Level_4_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level 4 Description</label>
    <type>Text</type>
</CustomField>