force-app/main/default/objects/NCMT_Assembly_Lookup_Item__c/fields/Master_Format_Line_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Master_Format_Line_Item_Number__c</fullName>
    <label>Master Format Line Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>