force-app/main/default/objects/NCMT_Assembly_Lookup_Item__c/fields/Material_Conversion_Factor__c.field-meta.xml
<CustomField>
    <fullName>Material_Conversion_Factor__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Material Conversion Factor</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>