force-app/main/default/objects/NCMT_Assembly_Lookup_Item__c/fields/MF_Line_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>MF_Line_Item_Description__c</fullName>
    <formula>NCMT_Master_Format_Lookup__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MF Line Item Description</label>
    <type>Text</type>
</CustomField>