force-app/main/default/objects/NCMT_Assembly_Lookup_Item__c/fields/NCMT_Master_Format_Lookup__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Master_Format_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCMT Master Format Lookup</label>
    <referenceTo>NCMT_DES_Lookup_details__c</referenceTo>
    <relationshipLabel>NCMT Assembly Lookup Items</relationshipLabel>
    <relationshipName>NCMT_Assembly_Lookup_Items</relationshipName>
    <type>Lookup</type>
</CustomField>