force-app/main/default/objects/NCMT_Assembly_Lookup_Item__c/fields/Total_Cost_OP_f__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_OP_f__c</fullName>
    <formula>(NCMT_Master_Format_Lookup__r.O_P_Unit_Total__c * Quantity__c)/Conversion_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost OP f</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>