force-app/main/default/objects/NCMT_Assembly_Lookup_Item__c/fields/Unit_Cost_Skey__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost_Skey__c</fullName>
    <label>Unit_Cost_Skey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>