force-app/main/default/objects/NCMT_Assembly_Lookup_Item__c/fields/Unit_f__c.field-meta.xml
<CustomField>
    <fullName>Unit_f__c</fullName>
    <formula>NCMT_Master_Format_Lookup__r.Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit</label>
    <type>Text</type>
</CustomField>