force-app/main/default/objects/NCMT_Assembly_Lookup_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assembly_Lookup_Detail__c</columns>
    <columns>Master_Format_Line_Item_Number__c</columns>
    <columns>MF_Line_Item_Description__c</columns>
    <columns>NCMT_Master_Format_Lookup__c</columns>
    <columns>Material_Unit_Cost__c</columns>
    <columns>Labor_Unit_Cost__c</columns>
    <columns>Equipment_Unit_Cost__c</columns>
    <columns>Fiscal_Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>File_Name__c</field>
        <operation>contains</operation>
        <value>GSAAssemblies</value>
    </filters>
    <filters>
        <field>Material_Conversion_Factor__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All</label>
</ListView>