force-app/main/default/objects/NCMT_Assembly_Lookup_Item__c/listViews/FY_2021.listView-meta.xml
<ListView>
    <fullName>FY_2021</fullName>
    <columns>NAME</columns>
    <columns>Assembly_Lookup_Detail__c</columns>
    <columns>Master_Format_Line_Item_Number__c</columns>
    <columns>MF_Line_Item_Description__c</columns>
    <columns>NCMT_Master_Format_Lookup__c</columns>
    <columns>Material_Unit_Cost__c</columns>
    <columns>Labor_Unit_Cost__c</columns>
    <columns>Equipment_Unit_Cost__c</columns>
    <columns>Fiscal_Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fiscal_Year__c</field>
        <operation>equals</operation>
        <value>2021</value>
    </filters>
    <label>FY-2021</label>
</ListView>